fix human readable breadcrumb titles, fix breadcrumb aligment

--- a/assets/css/project/breadcrumb.less
+++ b/assets/css/project/breadcrumb.less
@@ -15,7 +15,8 @@
 }
 
 .source_breadcrumb_lst {
-    margin: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding: 0;
     list-style: none;
 }
